--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     const currentDate = new Date();
     const remainingTime = targetDate - currentDate;
 
-    //i will change before tume run out.
+    <!-- i will change before time run out. -->
 
     if (remainingTime <= 0) {
       document.getElementById("countdown").innerHTML = "Obrigado por esperar!";
