Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     const currentDate = new Date();
     const remainingTime = targetDate - currentDate;
 
-    <!-- o conhecimento é absoluto.
-         assim como aquele que o tem. -->
+    <!-- o conhecimento é absoluto. assim como aquele que o tem. -->
 
     if (remainingTime <= 0) {
       document.getElementById("countdown").innerHTML = "Obrigado por esperar!";
