Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
     <!-- 1397 -->
 
+<h6>
+    Aquele que caminha entre as realidades, através da dimensão dos delírios.
+</h6>
+
       document.getElementById("countdown").innerHTML = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
       setTimeout(updateCountdown, 1000);
     }
