Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>codigo fonte</title>
+<h6>Aquele que caminha entre as realidades, através da dimensão dos delírios.</h6>
+
 <style>
   body {
     margin: 0;
@@ -38,9 +40,6 @@
 
     <!-- 1397 -->
 
-<h6>
-    Aquele que caminha entre as realidades, através da dimensão dos delírios.
-</h6>
 
       document.getElementById("countdown").innerHTML = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
       setTimeout(updateCountdown, 1000);
