--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     font-size: 152px;
     color: white;
   }
+  #message {
+    font-size: 24px;
+    text-align: center;
+    margin-top: 20px;
+    color: grey;
+  }
 </style>
 </head>
 <body>
@@ -39,7 +45,6 @@
       const seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
 
     <!-- 1397 -->
-
 
       document.getElementById("countdown").innerHTML = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
       setTimeout(updateCountdown, 1000);
