--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </style>
 </head>
 <body>
-<div id="countdown"></div>
+<div id="countdown"></div><br>
 <div id="message">Aquele que caminha entre as realidades, através da dimensão dos delirios.</div>
 <script>
   function updateCountdown() {
