--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- 1397 -->
 
-      document.getElementById("countdown").innerHTML = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+      document.getElementById("countdown").innerHTML = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}&nbsp;&nbsp;`;
       setTimeout(updateCountdown, 1000);
     }
   }
