--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     font-size: 152px;
     color: white;
   }
-  #message {
-    font-size: 24px;
-    text-align: center;
-    margin-top: 20px;
-    color: grey;
+ #message {
+    font-size: 14px;
+    font-family: 'Times New Roman', serif;
+    color: gray;
+    margin-top: 10px;
   }
 </style>
 </head>
