--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   #message {
     font-size: 28px;
+    justify-content: center;
     font-family: 'Times New Roman', serif;
     color: gray;
     margin-top: 10px;
