--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+
+  <!-- me nomeie em breve. -->
+  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>:)</title>
 <style>
@@ -37,12 +40,16 @@
     const currentDate = new Date();
     const remainingTime = targetDate - currentDate;
 
+      <!-- o conhecimento é absoluto. assim como aquele que o tem. -->
+
     if (remainingTime <= 0) {
       document.getElementById("countdown").innerHTML = "Obrigado por esperar!";
     } else {
       const hours = Math.floor(remainingTime / (1000 * 60 * 60));
       const minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
       const seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
+
+      <!-- 1397 -->
 
       document.getElementById("countdown").innerHTML = `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
       setTimeout(updateCountdown, 1000);
