--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
 <meta charset="UTF-8">
 
-  <!-- me nomeie em breve. -->
-  <!-- 1397 -->
-  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>:)</title>
 <style>
@@ -17,17 +14,16 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: black;
+    background-color: white;
     font-family: 'Times New Roman', serif;
     font-size: 152px;
-    color: white;
+    color: black;
   }
-
   #message {
     font-size: 22px;
     justify-content: center;
     font-family: 'Times New Roman', serif;
-    color: gray;
+    color: black;
     margin-top: 10px;
   }
 </style>
@@ -58,5 +54,6 @@
 </body>
 
   <!-- o conhecimento é absoluto. assim como aquele que o tem. -->
+  <!-- 1397 é um deles -->
   
 </html>
