--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="contador">
-        <div class="titulo"></div>
+        <div class="titulo">Regra: não olhar os códigos fonte.</div>
         <div id="timer"></div>
     </div>
 
