--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             // Se a contagem regressiva terminar, exibe uma mensagem
             if (distance < 0) {
                 clearInterval(x);
-                document.getElementById("timer").innerHTML = "A contagem chegou ao fim!";
+                document.getElementById("timer").innerHTML = "https://i.imgur.com/MV3ONJi.png";
             }
         }, 1000);
     </script>
