--- a/end.html
+++ b/end.html
@@ -17,7 +17,7 @@
             height: 100vh;
             margin: 0;
             text-align: center;
-            background-image: url('sua-imagem.jpg'); /* Substitua 'sua-imagem.jpg' pela URL da sua imagem */
+            background-image: url('energia.jpg'); /* Substitua 'sua-imagem.jpg' pela URL da sua imagem */
             background-size: cover;
             background-position: center;
             position: relative;
