--- a/end.html
+++ b/end.html
@@ -27,7 +27,7 @@
 
         /* A imagem de fundo só aparece quando o mouse passa sobre o contador */
         body.with-image {
-            background-image: url('sua-imagem.jpg'); /* Substitua 'sua-imagem.jpg' pela URL da sua imagem */
+            background-image: url('energia.jpg'); /* Substitua 'sua-imagem.jpg' pela URL da sua imagem */
             background-size: cover;
             background-position: center;
         }
