--- a/end.html
+++ b/end.html
@@ -71,6 +71,7 @@
             color: black;
             margin-top: 20px;
             transition: color 0.3s;
+            font-weight: bold;
         }
 
         .contador:hover + .endereco {
