--- a/hint.html
+++ b/hint.html
@@ -10,6 +10,8 @@
             text-align: center;
             margin: 0;
             padding: 0;
+            background-color: black; 
+            color: white; 
         }
         h1 {
             font-size: 48px;
