--- a/end.html
+++ b/end.html
@@ -80,7 +80,7 @@
     </style>
 </head>
 <body class="no-image">
-    <h1>É só o começo! Nós vemos em:</h1>
+    <h1>É só o começo! Ele retornará em:</h1>
 
     <div id="contador" class="contador">
         <span id="dias">00d</span>
