--- a/end.html
+++ b/end.html
@@ -75,7 +75,7 @@
         }
 
         .contador:hover + .endereco {
-            color: red;
+            color: purple;
         }
     </style>
 </head>
