--- a/end.html
+++ b/end.html
@@ -32,6 +32,7 @@
             background-position: center;
             background-repeat: no-repeat; /* Impede que a imagem se repita */
             position: relative;
+            transition: 0.8s;
         }
 
         /* Criar a camada com transparência sobre a imagem */
