--- a/end.html
+++ b/end.html
@@ -32,7 +32,7 @@
             background-position: center;
             background-repeat: no-repeat; /* Impede que a imagem se repita */
             position: relative;
-            transition: 0.8s;
+            transition: color 1.5s;
         }
 
         /* Criar a camada com transparência sobre a imagem */
