--- a/end.html
+++ b/end.html
@@ -32,7 +32,8 @@
             background-position: center;
             background-repeat: no-repeat; /* Impede que a imagem se repita */
             position: relative;
-            transition: color 1.5s;
+            opacity: 0; 
+            animation: fadeIn 3s forwards; 
         }
 
         /* Criar a camada com transparência sobre a imagem */
