--- a/end.html
+++ b/end.html
@@ -32,7 +32,7 @@
             background-position: center;
             background-repeat: no-repeat; /* Impede que a imagem se repita */
             position: relative;
-            animation: fadeIn 3s forwards; 
+            transition: opacity 0.9s;
         }
 
         /* Criar a camada com transparência sobre a imagem */
