--- a/hint.html
+++ b/hint.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Use a chave</h1>
+    <h1>Na quietude do momento, onde o silêncio toca a chave, um segredo aguarda ser descoberto. Deixe sua mão descansar sobre o metal frio e espere, pois apenas quando o contato for feito, o véu da resposta começará a se levantar. Não apresse o gesto, pois a chave não se revela a quem busca com pressa, mas a quem tem paciência para ouvir o sussurro da verdade.</h1>
     <a href="dica.jpg" download>
         <img src="dica.jpg" alt="Dica">
     </a>
